[package]
name = "screwsat"
version = "2.1.2"
authors = ["togatoga <togasakitogatoga@gmail.com>"]
edition = "2018"
homepage = "https://github.com/togatoga/screwsat"
repository = "https://github.com/togatoga/screwsat"
description = "A simple condlict driven clause learning sat solver"
license = "MIT"
readme = "README.md"
exclude = ["cnf"]

categories = ["algorithms", "command-line-utilities"]
keywords = ["solver", "satisfiability", "sat"]

[dependencies]

[lib]
name="screwsat"
path="src/lib.rs"

[[bin]]
name="screwsat"

[dev-dependencies]
walkdir="2"

[profile.release]
debug = true

[features]
unsafe=[]
